--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,13 @@
 }
 .redes-sociais{
     display: flex;
-    justify-content: center;
+    /* justify-content: ; */
+    /* text-align: center; */
+    /* align-items: center; */
+}
+.redes-sociais a{
+    color: white;
+    text-decoration: none;
 }
 .redes-sociais img{
     width: 100%;
@@ -173,7 +179,7 @@
 }
 .habilidades-flex img{
     width: 100%;
-    max-width: 10%;
+    max-width: 15%;
 }
 .habilidades-flex{
     margin: 0% 10% 0% 10%;
@@ -184,20 +190,22 @@
 .html, .css, .javascript, .mysql, .wordpress, .bootstrap{
     width: 100%;
     max-width: 30%;
-    margin-top: 5%;
+    /* margin-top: 5%; */
     margin-bottom: 10%;
 }
 .lista-estrelas{
     background-image: url(../img/estrela.svg) ;
     /* background-size: 20px; */
     background-repeat: repeat-x;
-    height: 100%;
-    max-height: 30%;
+    height: 20%;
     margin: 0 auto;
     /* width: 100%; */
 }
 .habilidades-flex h5{
-    font-size:1rem;
+    color: rgb(228, 222, 222);
+    font-weight: 700;
+    font-size: 1.22rem;
+    padding: 10px;
 }
 
 /* PORTFÓLIO */
