--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,6 @@
     width: 100%;
     max-width: 22%;
     box-shadow: 1px 5px 10px 1px  rgba(134, 139, 124, 0.555);    
-
     /* height: 100%; */
     /* max-height: 90vh; */
     /* padding: 5rem; */
@@ -154,8 +153,9 @@
 
 #servicos .text{
     width: 100%;
-    max-width: 60vw;
+    /* max-width: 60vw; */
     margin-top: 1rem;
+    text-align: center;
 }
 
 .sobre-service span{
@@ -228,23 +228,13 @@
     width: 100%;
     max-width: 95%;
     margin: 10px;
-
 }
-
-.lista-portfolio{
+.lista-portfolio ul {
     display: flex;
     margin: 2rem;
-    /* flex-direction: row; */
-    /* justify-content: center; */
-    /* flex-wrap: wrap; */
+    flex-direction: row;
+    justify-content: center;    
 }
-
-
-
-
-
-
-
 /* CONTATO */
 #contato{
     background: black;
@@ -362,9 +352,9 @@
 
     .service-1, .service-2, .service-3, .service-4, .service-5{
         margin-top: 2rem;
-        max-width:80%;
+        max-width:90%;
         /* margin-right: 400px; */
-        margin-left: 2rem;
+        /* margin-left: 2rem; */
         /* max-width: 150%; */
     }
 
