--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,5 +12,7 @@ a, ul, li{
     text-decoration: none;
     text-transform: none;
     list-style: none;
+    font-family: 'Open Sans', sans-serif;
+
     
 }
