--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,10 +310,10 @@
     margin: 10px;
 }
 .lista-portfolio ul {
-    display: flex;
-    margin: 2rem;
     flex-direction: row;
-    justify-content: center;    
+    justify-content: center;    display: flex;
+    margin: 2rem;
+    
 }
 /* CONTATO */
 #contato{
