--- a/assets/css/style.portfolio.css
+++ b/assets/css/style.portfolio.css
@@ -38,7 +38,9 @@
 
 @media(max-width: 768px){
     #header{
-        background-color: black;
+        background-color: gray;
+        /* background-color: black; */
+
     }
   
 }
